landing/href github and linkedin

--- a/styles/mediaLinks.module.css
+++ b/styles/mediaLinks.module.css
@@ -4,3 +4,9 @@
   margin-top: 20px;
   margin-bottom: 40px;
 }
+.press {
+  transition: transform 0.3s ease;
+}
+.press:hover {
+  transform: translateY(-5px);
+}
