--- a/styles/mediaLinks.module.css
+++ b/styles/mediaLinks.module.css
@@ -1,8 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 2%;
 }
 .press {
   transition: transform 0.3s ease;
