--- a/styles/mediaLinks.module.css
+++ b/styles/mediaLinks.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 2%;
+  margin-top: -9%;
 }
 .press {
   transition: transform 0.3s ease;
