--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -16,11 +16,13 @@
 }
 
 .link {
+  display: flex;
+  flex-direction: column;
   color: #fb6fcb;
   text-decoration: none;
   margin-bottom: 28px;
   margin-top: 25px;
-  margin-left: 80px;
+  margin-left: 18%;
   line-height: 0.8;
   font-weight: 600;
 }
