--- a/styles/mediaLinks.module.css
+++ b/styles/mediaLinks.module.css
@@ -1,12 +1,16 @@
 .container {
   display: flex;
-  justify-content: center;
   margin-bottom: 2%;
-  margin-top: -9%;
+  margin-top: -6%;
+  padding-top: 10px;
 }
 .press {
   transition: transform 0.3s ease;
 }
 .press:hover {
   transform: translateY(-5px);
+}
+.style {
+  border-radius: 30px;
+  margin-left: 15px;
 }
