--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 40px;
-  background-color: #464646;
+  background-color: rgba(70, 70, 70, 0.3);
   width: 80%;
   height: 88%;
   border-radius: 15px;
