--- a/styles/mediaLinks.module.css
+++ b/styles/mediaLinks.module.css
@@ -2,10 +2,11 @@
   display: flex;
   margin-bottom: 2%;
   margin-top: -6%;
-  padding-top: 10px;
+  overflow: visible;
 }
 .press {
   transition: transform 0.3s ease;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .press:hover {
   transform: translateY(-5px);
