--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -5,10 +5,10 @@
   border-radius: 22px;
   font-size: medium;
   height: 54px;
-  width: 130px;
+  width: 112px;
   justify-content: center;
   margin-bottom: 20px;
-  outline: none;
+  border: none;
 }
 
 .press {
@@ -17,5 +17,5 @@
 
 .press:hover {
   transform: translateY(-5px);
-  background-color: #fb6fcad2;
+  background-color: rgba(255, 255, 255, 0.3);
 }
