--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -4,10 +4,11 @@
   color: white;
   border-radius: 22px;
   font-size: medium;
-  height: 54px;
+  height: 56px;
   width: 112px;
   justify-content: center;
   margin-bottom: 20px;
+  margin-left: 50%;
   border: none;
 }
 
