--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   align-items: center;
+  height: 100vh;
 }
 .background {
   background-image: url("/Users/pedro/Desktop/webpage/public/wpTheme.jpg");
