navbar/ position standard

--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -7,4 +7,5 @@
   background-image: url("/Users/pedro/Desktop/webpage/public/wpTheme.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
