--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   padding: 40px;
   background-color: rgba(70, 70, 70, 0.3);
-  width: 80%;
-  height: 80%;
+  width: 1000px;
+  height: 78vh;
   border-radius: 15px;
-  margin-left: 8%;
-  margin-top: 8%;
+  margin-left: 90px;
+  margin-top: 90px;
   overflow-y: auto;
 }
 .titleContainer {
