--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -7,7 +7,7 @@
   height: 56px;
   width: 112px;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 10%;
   margin-left: 50%;
   border: none;
 }
