--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -1,15 +1,13 @@
 .button {
-  justify-content: center;
   background-color: #fb6fcaef;
   color: white;
   border-radius: 22px;
   font-size: medium;
   height: 56px;
   width: 112px;
-  justify-content: center;
-  margin-bottom: 10%;
-  margin-left: 50%;
   border: none;
+  margin-left: -500px;
+  margin-top: 130px;
 }
 
 .press {
