--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -1,13 +1,13 @@
 .container {
   display: flex;
   color: white;
-  background-color: rgba(70, 70, 70, 0.3);
-  margin-top: 20px;
+  background-color: rgba(70, 70, 70, 0.2);
   margin-right: 10%;
   margin-left: 5%;
+  margin-top: -200px;
   width: 40%;
-  border: 1px solid #f6ff8e;
   border-radius: 30px;
-  padding: 20px;
+  padding: 15px;
   line-height: 2;
+  border: none;
 }
