--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -3,11 +3,16 @@
   color: white;
   background-color: rgba(70, 70, 70, 0.2);
   margin-right: 10%;
-  margin-left: 5%;
+  margin-left: 10%;
   margin-top: -200px;
   width: 40%;
   border-radius: 30px;
   padding: 15px;
   line-height: 2;
   border: none;
+}
+
+.buttonContainer {
+  display: flex;
+  margin-top: 200px;
 }
