--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -1,4 +1,8 @@
-.container {
-  display: flex;
+.imageContainer {
+  top: 0;
   right: 0;
+  display: flex;
+  flex-direction: column;
+  overflow: visible;
+  margin-left: 80px;
 }
