--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -4,7 +4,7 @@
   height: 100vh;
 }
 .background {
-  background-image: url("/Users/pedro/Desktop/webpage/public/wpTheme.jpg");
+  background-image: url("/public/wpTheme.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
