--- a/styles/stack.module.css
+++ b/styles/stack.module.css
@@ -4,13 +4,28 @@
   font-weight: 600;
 }
 .container {
+  align-items: center;
   display: flex;
   flex-direction: column;
   padding: 40px;
   background-color: rgba(70, 70, 70, 0.3);
-  width: 500px;
+  color: white;
+  width: 800px;
   border-radius: 15px;
   margin-left: 120px;
   margin-top: 50px;
   overflow-y: auto;
+}
+.skillsList {
+  margin-left: 20px;
+  list-style-type: none;
+}
+.listContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px;
+  background-color: rgba(70, 70, 70, 0.3);
+  width: 600px;
+  border-radius: 15px;
 }
