--- a/styles/stack.module.css
+++ b/styles/stack.module.css
@@ -2,25 +2,33 @@
   color: #f6ff8e;
   font-size: large;
   font-weight: 600;
+  margin-bottom: 0;
+  margin-top: 20px;
 }
 .container {
   align-items: center;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   padding: 40px;
   background-color: rgba(70, 70, 70, 0.3);
   color: white;
   width: 800px;
   border-radius: 15px;
-  margin-left: 120px;
-  margin-top: 50px;
+  margin-left: 4%;
+  margin-top: 1%;
   overflow-y: auto;
 }
 .skillsList {
   margin-left: 20px;
   list-style-type: none;
+  line-height: 1.4;
+  font-size: 11pt;
 }
 .listContainer {
+  /* justify-content: center; */
+
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -28,4 +36,8 @@
   background-color: rgba(70, 70, 70, 0.3);
   width: 600px;
   border-radius: 15px;
+  font-weight: 300;
+}
+.imageContainer {
+  border-radius: 10px;
 }
