app/bgnd opacity 0.9

--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -1,6 +1,7 @@
 .imageContainer {
   top: 0;
   right: 0;
+  overflow-y: visible;
   display: flex;
   flex-direction: column;
   overflow: visible;
