form/container sizing adjustment

--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -6,8 +6,8 @@
   border-radius: 20px;
   height: 400px;
   padding: 30px;
-  padding-left: 280px;
-  padding-right: 280px;
+  padding-left: 10%;
+  padding-right: 10%;
   border: none;
   margin: auto;
 }
