--- a/styles/stack.module.css
+++ b/styles/stack.module.css
@@ -10,14 +10,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 40px;
+  padding: 20px;
   background-color: rgba(70, 70, 70, 0.3);
   color: white;
-  width: 800px;
+  width: auto;
   border-radius: 15px;
-  margin-left: 4%;
-  margin-top: 1%;
+  margin: auto;
   overflow-y: auto;
+  overflow: visible;
 }
 .skillsList {
   margin-left: 20px;
