--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -37,9 +37,12 @@
 }
 .button {
   justify-content: center;
-  border-radius: 9px;
+  text-align: center;
+  font-size: medium;
+  border-radius: 12px;
   border: none;
-  height: 29px;
+  height: 38px;
+  width: 68px;
   margin-left: 40%;
   color: white;
   background-color: #fb6fcaef;
