--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   overflow: visible;
-  margin-left: 110px;
+  margin-left: auto;
+  margin-right: 5%;
   max-height: 100vh;
 }
