--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -55,3 +55,7 @@
   transform: translateY(-5px);
   background-color: rgba(255, 255, 255, 0.3);
 }
+.errorMessage {
+  font-size: 10pt;
+  color: rgb(248, 5, 163);
+}
