--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -4,10 +4,9 @@
   justify-content: center;
   background-color: rgba(70, 70, 70, 0.5);
   border-radius: 20px;
-  height: 400px;
-  padding: 30px;
-  padding-left: 10%;
-  padding-right: 10%;
+  height: 520px;
+  width: 600px;
+  padding: 60px;
   border: none;
   margin: auto;
   margin-left: 5%;
@@ -15,23 +14,24 @@
 
 .label {
   color: white;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  margin-top: 20px;
 }
 
 .input {
   border-radius: 3px;
-  margin-left: 10%;
   margin-top: 10px;
   margin-bottom: 10px;
-  width: 260px;
+  width: 400px;
   height: 40px;
   border: none;
 }
 .text {
   border-radius: 3px;
-  margin-left: 10%;
   margin-top: 10px;
-  margin-bottom: 30px;
-  width: 260px;
+  width: 400px;
   height: 88px;
   border: none;
 }
@@ -45,7 +45,7 @@
   width: 68px;
   margin-left: 40%;
   color: white;
-  background-color: #fb6fcaef;
+  background-color: rgb(249, 127, 127);
 }
 .ready {
   justify-content: center;
@@ -69,6 +69,10 @@
   background-color: rgba(255, 255, 255, 0.3);
 }
 .errorMessage {
-  font-size: 10pt;
-  color: rgb(248, 5, 163);
+  font-size: 9pt;
+  color: rgb(249, 127, 127);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 25px;
 }
