--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -2,10 +2,8 @@
   display: flex;
   color: white;
   background-color: rgba(70, 70, 70, 0.2);
-  margin-right: 10%;
-  margin-left: 10%;
-  margin-top: -200px;
-  width: 40%;
+  margin: auto;
+  width: 360px;
   border-radius: 30px;
   padding: 15px;
   line-height: 2;
