--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -1,13 +1,15 @@
 .container {
   display: flex;
   color: white;
-  background-color: rgba(70, 70, 70, 0.2);
+  background-color: rgba(24, 24, 24, 0.675);
   margin: auto;
-  width: 360px;
-  border-radius: 30px;
+  width: 35%;
+  border-radius: 15px;
   padding: 15px;
   line-height: 2;
   border: none;
+  font-size: 12pt;
+  font-weight: 100;
 }
 
 .buttonContainer {
