--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -40,7 +40,7 @@
 }
 .button {
   justify-content: center;
-  font-size: medium;
+  font-size: 10pt;
   border-radius: 12px;
   border: none;
   height: 50px;
