--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   width: 600px;
-  height: 240px;
+  height: 290px;
   background-color: rgba(24, 24, 24, 0.675);
   border-radius: 20px;
   transition: transform 0.3s ease;
@@ -38,7 +38,13 @@
 .body {
   color: rgba(231, 231, 231, 0.742);
   padding: 18px;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 .atag {
   text-decoration: none;
+}
+.image {
+  margin-left: 0;
+  margin-top: 10px;
 }
