--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -22,7 +22,8 @@
   width: 103px;
   padding: 30px;
   border-radius: 22px;
-  margin-left: 40%;
+  margin-left: 50%;
+  margin-top: 40%;
   font-size: 10pt;
   border: none;
   font-weight: 400;
