--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -8,6 +8,7 @@
   margin-left: auto;
   margin-right: 5%;
   max-height: 100vh;
+  z-index: 1;
 }
 .toggButt {
   font-family: "Montserrat", sans-serif;
@@ -22,12 +23,13 @@
   width: 103px;
   padding: 30px;
   border-radius: 22px;
-  margin-left: 50%;
-  margin-top: 40%;
+  margin-left: 30%;
+  margin-top: 18%;
   font-size: 10pt;
   border: none;
   font-weight: 400;
   line-height: 1.5;
+  z-index: 2;
 }
 .press {
   transition: transform 0.3s ease;
