--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   align-items: center;
-  height: 100vh;
+  max-height: 100vh;
 }
 .background {
   background-image: url("/public/wpTheme.jpg");
