--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,13 +1,11 @@
-.container {
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  margin-right: 20%;
-}
+/* .container {
+  overflow-y: auto;
+} */
 .card {
-  margin-bottom: 10%;
-  margin-left: 15%;
+  margin-bottom: 5%;
+  margin-left: 40%;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   width: 600px;
@@ -15,6 +13,7 @@
   background-color: rgba(24, 24, 24, 0.675);
   border-radius: 20px;
   transition: transform 0.3s ease;
+  overflow-y: auto;
 }
 .card:hover {
   transform: translateY(-5px);
@@ -40,6 +39,7 @@
   padding: 18px;
   margin-bottom: 0;
   margin-top: 0;
+  line-height: 1.3;
 }
 .atag {
   text-decoration: none;
