--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  width: 500px;
   height: 290px;
   padding: 10px;
   background-color: rgba(24, 24, 24, 0.675);
@@ -50,7 +50,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  width: 500px;
   height: 290px;
   padding: 10px;
   background-color: rgba(24, 24, 24, 0.675);
