--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -10,7 +10,7 @@
   width: 500px;
   height: 290px;
   padding: 10px;
-  background-color: rgba(24, 24, 24, 0.675);
+  background-color: rgba(24, 24, 24, 0.5);
   border-radius: 20px;
   transition: transform 0.3s ease;
   overflow-y: auto;
@@ -57,6 +57,9 @@
   border-radius: 20px;
   transition: transform 0.3s ease;
   overflow-y: auto;
+}
+.atag:hover {
+  transform: translateY(-5px);
 }
 .image {
   margin-left: 0;
