--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -29,6 +29,7 @@
   width: 300px;
   height: 40px;
   border: none;
+  color: rgb(127, 127, 127);
 }
 .text {
   /* text-align: center; */
@@ -37,6 +38,7 @@
   width: 300px;
   height: 88px;
   border: none;
+  color: rgb(127, 127, 127);
 }
 .button {
   justify-content: center;
@@ -44,9 +46,10 @@
   border-radius: 12px;
   border: none;
   height: 50px;
+  margin-top: 25px;
   width: 80px;
   color: white;
-  background-color: rgba(255, 27, 251, 0.575);
+  background-color: rgba(255, 27, 213, 0.727);
 }
 .ready {
   justify-content: center;
@@ -71,10 +74,14 @@
 .errorMessage {
   font-size: 10.5pt;
   font-weight: 600;
-  color: rgba(255, 27, 251, 0.727);
+  color: rgba(255, 27, 213, 0.727);
   text-align: center;
   display: flex;
   justify-content: center;
   margin-bottom: 25px;
   margin-top: 12px;
+  background-color: rgba(255, 255, 255, 0.343);
+  border-radius: 10px;
+  padding-inline: 10px;
+  display: inline-block;
 }
