--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -49,7 +49,7 @@
   margin-top: 25px;
   width: 80px;
   color: white;
-  background-color: rgba(255, 27, 213, 0.727);
+  background-color: #fb6fcad4;
 }
 .ready {
   justify-content: center;
@@ -74,7 +74,7 @@
 .errorMessage {
   font-size: 10.5pt;
   font-weight: 600;
-  color: rgba(255, 27, 213, 0.727);
+  color: #fb6fcafc;
   text-align: center;
   display: flex;
   justify-content: center;
