--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -1,15 +1,15 @@
 .container {
   display: flex;
-  color: white;
-  background-color: rgba(24, 24, 24, 0.675);
+  font-size: 10pt;
+  font-weight: 400;
+  color: rgba(231, 231, 231, 0.742);
+  background-color: rgba(24, 24, 24, 0.6);
   margin: auto;
   width: 35%;
   border-radius: 15px;
   padding: 15px;
   line-height: 2;
   border: none;
-  font-size: 12pt;
-  font-weight: 100;
   max-height: fit-content;
   overflow: visible;
 }
