--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -62,6 +62,11 @@
   color: white;
   margin-top: 25px;
   background-color: #aefb6f90;
+  transition: transform 0.3s ease;
+}
+.ready:hover {
+  transform: translateY(-5px);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .press {
