--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -8,3 +8,15 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+@media (max-width: 490px) and (max-height: 1000px) {
+  .container {
+    display: block;
+    max-height: none;
+  }
+  .background {
+    background-image: url("/public/wpTheme.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
