--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -55,3 +55,14 @@
   margin-bottom: 35px;
   line-height: 1.1;
 }
+@media (max-width: 490px) {
+  .container {
+    width: 100%;
+    margin: 0;
+    padding: 20px;
+  }
+
+  .link {
+    margin-left: 0;
+  }
+}
