cv/ media query ok

--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -17,6 +17,6 @@
   .background {
     background-image: url("/public/wpTheme.jpg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
   }
 }
