--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -39,3 +39,26 @@
   transform: translateY(-5px);
   background-color: rgba(81, 81, 81, 0.467);
 }
+
+@media (max-width: 490px) {
+  .imageContainer {
+    margin-right: 0;
+    margin-left: 0;
+    max-height: none;
+    height: 100vh;
+  }
+
+  .toggButt {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 350px;
+    width: 80px;
+    height: 60px;
+    padding: 20px;
+    font-size: 8pt;
+  }
+
+  .press:hover {
+    background-color: rgba(81, 81, 81, 0.467);
+  }
+}
