--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -91,3 +91,47 @@
   padding-inline: 10px;
   display: inline-block;
 }
+@media (max-width: 490px) {
+  .container {
+    width: 90%;
+    padding: 30px;
+    height: auto;
+    margin: auto;
+    margin-top: 20px;
+  }
+
+  .label {
+    margin-top: 15px;
+  }
+
+  .input {
+    width: 100%;
+  }
+
+  .text {
+    width: 100%;
+  }
+
+  .button {
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .ready {
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .press:hover,
+  .ready:hover {
+    transform: translateY(-5px);
+    background-color: rgba(255, 255, 255, 0.3);
+  }
+
+  .errorMessage {
+    font-size: 9pt;
+    margin-bottom: 15px;
+    margin-top: 8px;
+    padding: 8px;
+  }
+}
