mediaqueries done for mobile ipohne xr

--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -18,5 +18,6 @@
     background-image: url("/public/wpTheme.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
   }
 }
