--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,6 +1,3 @@
-/* .container {
-  overflow-y: auto;
-} */
 .card {
   margin-bottom: 4%;
   margin-left: 18%;
@@ -65,4 +62,30 @@
   margin-left: 0;
   margin-top: 10px;
   margin-bottom: 0;
+}
+@media (max-width: 490px) {
+  .card,
+  .atag {
+    margin-left: 5%;
+    width: 90%;
+  }
+
+  .mainTitle {
+    font-size: 18px;
+  }
+
+  .subTitle {
+    font-size: 12px;
+    padding: 10px;
+  }
+
+  .body {
+    font-size: 8pt;
+  }
+
+  .image {
+    margin-left: 0;
+    margin-top: 5px;
+    margin-bottom: 0;
+  }
 }
