--- a/styles/contact_redirect.module.css
+++ b/styles/contact_redirect.module.css
@@ -24,7 +24,7 @@
   border-radius: 30px;
   background-color: #aefb6fa9;
   margin: auto;
-  max-width: 38%;
+  max-width: 50%;
 }
 .containerError {
   align-items: center;
@@ -33,4 +33,17 @@
   background-color: #ff463f70;
   margin: auto;
   max-width: 38%;
+}
+@media (max-width: 490px) {
+  .container,
+  .containerError {
+    width: 90%;
+    margin: auto;
+    border-radius: 20px;
+  }
+
+  .message {
+    text-align: center;
+    margin: 0;
+  }
 }
