--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -60,9 +60,13 @@
     width: 100%;
     margin: 0;
     padding: 20px;
+    align-items: center;
   }
 
   .link {
     margin-left: 0;
+    line-height: 0;
+    margin-bottom: 15px;
+    margin-top: 15px;
   }
 }
