--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -45,13 +45,12 @@
     margin-right: 0;
     margin-left: 0;
     max-height: none;
-    height: 100vh;
   }
 
   .toggButt {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 350px;
+    position: relative;
+    margin-left: 10px;
+    margin-top: 10px;
     width: 80px;
     height: 60px;
     padding: 20px;
