--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -14,10 +14,21 @@
     display: block;
     max-height: none;
   }
+
+  body {
+    overflow: hidden;
+  }
+
   .background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
     background-image: url("/public/wpTheme.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    background-position: center;
   }
 }
