media/fixing issues

--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -16,7 +16,7 @@
   }
 
   body {
-    overflow: scroll;
+    overflow: hidden;
   }
 
   .background {
@@ -25,8 +25,9 @@
     left: 0;
     right: 0;
     bottom: 0;
+    width: 100vw;
+    height: 100vh;
     background-image: url("/public/wpTheme.jpg");
-    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
