media/remove unnecesary space inbetewwn

--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -15,12 +15,9 @@
     max-height: none;
   }
 
-  body {
-    overflow: hidden;
-  }
-
   .background {
-    position: fixed;
+    overflow: visible;
+    /* position: fixed; */
     top: 0;
     left: 0;
     right: 0;
