--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -66,7 +66,19 @@
   .link {
     margin-left: 0;
     line-height: 0;
-    margin-bottom: 15px;
-    margin-top: 15px;
+    margin-bottom: 10px;
+    margin-top: 18px;
+    font-size: medium;
+  }
+  .title {
+    color: rgba(255, 255, 255, 0.857);
+    font-weight: 400;
+    margin-bottom: 12px;
+    line-height: 0.7;
+  }
+  .titleContainer {
+    text-align: center;
+    margin-top: 2px;
+    line-height: 0.3;
   }
 }
