--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -93,8 +93,8 @@
 }
 @media (max-width: 490px) {
   .container {
-    width: 90%;
-    padding: 30px;
+    width: 100vw;
+    padding: 20px;
     height: auto;
     margin: auto;
     margin-top: 20px;
@@ -105,21 +105,22 @@
   }
 
   .input {
-    width: 100%;
+    width: 350px;
+    margin: 5px;
   }
 
   .text {
-    width: 100%;
+    width: 350px;
   }
 
   .button {
     margin-top: 20px;
-    width: 100%;
+    width: 20%;
   }
 
   .ready {
     margin-top: 20px;
-    width: 100%;
+    width: 20%;
   }
 
   .press:hover,
