--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -101,21 +101,18 @@
   }
 
   .label {
-    margin-top: 15px;
+    margin-top: 2%;
   }
 
-  .input {
-    width: 350px;
-    margin: 5px;
-  }
-
+  .input,
   .text {
-    width: 350px;
+    width: 240px;
+    margin: 5px;
   }
 
   .button {
     margin-top: 20px;
-    width: 20%;
+    width: 100px;
   }
 
   .ready {
