--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -21,8 +21,9 @@
 
 @media (max-width: 490px) {
   .container {
-    width: 100%;
-    margin: 0;
+    width: 100vw;
+    margin-top: 20px;
+    border-radius: 0%;
     padding: 10px;
     font-size: 8pt;
   }
