--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -15,13 +15,16 @@
     max-height: none;
   }
 
+  body {
+    overflow: hidden;
+  }
+
   .background {
+    position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-image: url("/public/wpTheme.jpg");
     background-size: cover;
     background-position: center;
