--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -59,6 +59,7 @@
   .container {
     width: 100%;
     margin: 0;
+    margin-bottom: 8px;
     padding: 20px;
     border-radius: 0;
     align-items: center;
