--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -15,16 +15,16 @@
     max-height: none;
   }
 
-  /* body {
-    overflow: hidden;
-  } */
+  body {
+    overflow-y: scroll;
+  }
 
   .background {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 130%;
+    height: 100%;
     background-image: url("/public/wpTheme.jpg");
     background-size: cover;
     background-position: center;
