--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -26,7 +26,7 @@
     width: 100%;
     height: 100%;
     background-image: url("/public/wpTheme.jpg");
-    background-size: cover;
+    background-size: auto;
     background-position: center;
   }
 }
