--- a/styles/stack.module.css
+++ b/styles/stack.module.css
@@ -52,7 +52,7 @@
     margin-left: auto;
     margin-right: auto;
     height: auto;
-    overflow: visible;
+    overflow-y: scroll;
   }
 
   .skillsList {
