--- a/styles/contact_redirect.module.css
+++ b/styles/contact_redirect.module.css
@@ -37,13 +37,14 @@
 @media (max-width: 490px) {
   .container,
   .containerError {
-    width: 90%;
-    margin: auto;
+    width: 100vw;
+    margin-top: 30%;
     border-radius: 20px;
   }
 
   .message {
     text-align: center;
     margin: 0;
+    font-size: 10pt;
   }
 }
