--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,11 +1,12 @@
 .card {
-  margin-bottom: 2%;
-  margin-left: 18%;
+  margin: auto;
+  margin-left: 15px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 900px;
-  height: 200px;
+  width: 800px;
+  height: 220px;
   padding: 10px;
   background-color: rgba(24, 24, 24, 0.629);
   border-radius: 20px;
@@ -42,13 +43,15 @@
 }
 .atag {
   text-decoration: none;
-  margin-bottom: 2%;
-  margin-left: 18%;
+  margin: auto;
+  margin-bottom: 10px;
+  margin-left: 15px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 900px;
-  height: 200px;
+  width: 800px;
+  height: 220px;
   padding: 10px;
   background-color: rgba(24, 24, 24, 0.629);
   border-radius: 20px;
@@ -60,7 +63,7 @@
 }
 .image {
   margin-left: 0;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 0;
 }
 @media (max-width: 490px) {
