loader.adjust media query

--- a/styles/loader.module.css
+++ b/styles/loader.module.css
@@ -22,3 +22,14 @@
     transform: rotate(360deg);
   }
 }
+@media (max-width: 768px) {
+  .loaderContainer {
+    justify-content: center;
+    margin-left: 0;
+  }
+
+  .loader {
+    width: 80px;
+    height: 80px;
+  }
+}
