--- a/styles/mediaLinks.module.css
+++ b/styles/mediaLinks.module.css
@@ -18,3 +18,36 @@
   border-radius: 60px;
   margin-left: 15px;
 }
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .press {
+    margin-top: 15px;
+  }
+}
+
+.container {
+  margin-bottom: 10%;
+  margin-top: 10%;
+}
+
+.press {
+  transition: transform 0.3s ease;
+  background-color: rgba(255, 255, 255, 0.3);
+  margin: 0 15px; /* Add some horizontal margin between links */
+}
+
+.press:hover {
+  transform: translateY(-5px);
+}
+
+.style {
+  border-radius: 30px;
+}
+
+.styleInsta {
+  border-radius: 60px;
+}
