--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -88,6 +88,7 @@
   }
   .subTitles {
     margin-top: 5px;
+    margin-bottom: 10px;
     color: rgba(255, 255, 255, 0.707);
     font-weight: 100;
   }
