bios/adjust padding

--- a/styles/stack.module.css
+++ b/styles/stack.module.css
@@ -3,19 +3,20 @@
   font-size: large;
   font-weight: 600;
   margin-bottom: 0;
-  margin-top: 20px;
+  margin-top: 18px;
 }
 .container {
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 10px;
+  padding: 20px;
   background-color: rgba(70, 70, 70, 0.3);
   color: white;
   width: 50%;
   height: 100vh;
   margin-left: 8%;
+  margin-bottom: 40px;
   overflow-y: auto;
   overflow-x: visible;
 }
