--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -7,7 +7,10 @@
   margin: auto;
   width: 35%;
   border-radius: 15px;
-  padding: 15px;
+  padding: 40px;
+  padding-left: 50px;
+  padding-right: 40px;
+
   line-height: 2;
   border: none;
   max-height: fit-content;
