--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,10 +1,10 @@
 .card {
-  margin-left: 30px;
+  margin-left: 15px;
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 900px;
+  width: 830px;
   height: 200px;
   padding: 5px;
   background-color: rgba(24, 24, 24, 0.629);
@@ -16,26 +16,26 @@
   transform: translateY(-5px);
 }
 .mainTitle {
-  margin-top: 2%;
   color: #f6ff8e;
   font-size: 20px;
   font-weight: 700;
 }
 .subTitle {
-  margin: 0;
+  margin-bottom: 15px;
+  margin-top: -5px;
   line-height: 0.4;
   color: #ffffffc5;
   font-size: 13px;
   font-weight: 400;
   background-color: rgba(255, 255, 255, 0.362);
-  padding: 13px;
+  padding: 12px;
   border-radius: 8px;
 }
 .body {
   font-size: 10pt;
   font-weight: 400;
   color: rgba(231, 231, 231, 0.742);
-  padding: 20px;
+  padding: 8px;
   margin-bottom: 0;
   margin-top: 0;
   line-height: 1.5;
@@ -43,11 +43,11 @@
 .atag {
   text-decoration: none;
   margin-bottom: 15px;
-  margin-left: 30px;
+  margin-left: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 900px;
+  width: 830px;
   height: 200px;
   padding: 5px;
   background-color: rgba(24, 24, 24, 0.629);
