--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,10 +1,10 @@
 .card {
-  margin-left: 15px;
+  margin-left: 25%;
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 830px;
+  width: 500px;
   height: 200px;
   padding: 5px;
   background-color: rgba(24, 24, 24, 0.629);
@@ -43,11 +43,11 @@
 .atag {
   text-decoration: none;
   margin-bottom: 15px;
-  margin-left: 15px;
+  margin-left: 25%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 830px;
+  width: 500px;
   height: 200px;
   padding: 5px;
   background-color: rgba(24, 24, 24, 0.629);
