--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,11 +1,11 @@
 .card {
-  margin-left: 25%;
+  margin-left: 10%;
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 500px;
-  height: 200px;
+  width: 700px;
+  height: auto;
   padding: 5px;
   background-color: rgba(24, 24, 24, 0.629);
   border-radius: 20px;
@@ -43,12 +43,12 @@
 .atag {
   text-decoration: none;
   margin-bottom: 15px;
-  margin-left: 25%;
+  margin-left: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 500px;
-  height: 200px;
+  width: 700px;
+  height: auto;
   padding: 5px;
   background-color: rgba(24, 24, 24, 0.629);
   border-radius: 20px;
