--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
   max-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .background {
   background-image: url("/public/wpTheme.jpg");
