--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -56,6 +56,7 @@
 .subTitles {
   margin-top: -5px;
   color: rgba(255, 255, 255, 0.707);
+  line-height: 1.2;
 }
 @media (max-width: 490px) {
   .container {
