general/ component margin adjust + carousel init setup

--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,6 +1,41 @@
+.carousel {
+  display: flex; /* Display children in a row */
+  overflow-x: auto; /* Enable horizontal scrolling */
+  white-space: nowrap; /* Prevent card wrapping to the next line */
+  max-width: 50%;
+  margin: auto;
+}
+
 .card {
-  margin-left: 10%;
-  margin-bottom: 15px;
+  width: 90vw; /* Adjust styles for smaller screens */
+  margin-right: 0;
+  margin-left: 5%; /* Add some margin for spacing between cards */
+  padding: 5px;
+  background-color: rgba(24, 24, 24, 0.629);
+  border-radius: 20px;
+  width: 700px;
+  height: 30%;
+  flex-direction: column;
+  align-items: center;
+  /* margin: auto;
+ 
+
+  transition: transform 0.3s ease;
+  overflow-y: auto; */
+}
+.card:hover {
+  transform: translateY(-5px);
+}
+.atag {
+  width: 90vw; /* Adjust styles for smaller screens */
+  margin-right: 0;
+  margin-left: 5%; /* Add some margin for spacing between cards */
+  padding: 5px;
+  background-color: rgba(24, 24, 24, 0.629);
+  border-radius: 20px;
+  width: 700px;
+  /* text-decoration: none;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,9 +45,9 @@
   background-color: rgba(24, 24, 24, 0.629);
   border-radius: 20px;
   transition: transform 0.3s ease;
-  overflow-y: auto;
+  overflow-y: auto; */
 }
-.card:hover {
+.atag:hover {
   transform: translateY(-5px);
 }
 .mainTitle {
@@ -41,24 +76,7 @@
   line-height: 1.5;
   text-align: center;
 }
-.atag {
-  text-decoration: none;
-  margin-bottom: 15px;
-  margin-left: 10%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 700px;
-  height: auto;
-  padding: 5px;
-  background-color: rgba(24, 24, 24, 0.629);
-  border-radius: 20px;
-  transition: transform 0.3s ease;
-  overflow-y: auto;
-}
-.atag:hover {
-  transform: translateY(-5px);
-}
+
 .image {
   margin-top: 5px;
   margin-bottom: -20px;
