--- a/styles/stack.module.css
+++ b/styles/stack.module.css
@@ -15,8 +15,7 @@
   color: white;
   width: 50vw;
   height: 100vh;
-  margin-left: auto;
-  margin-bottom: 40px;
+  margin: auto;
   overflow-y: auto;
 }
 .skillsList {
