--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -5,8 +5,7 @@
   display: flex;
   flex-direction: column;
   overflow: visible;
-  margin-left: auto;
-  margin-right: 5%;
+  margin: auto;
   max-height: 100vh;
   z-index: 1;
 }
