--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -40,19 +40,28 @@
   padding: 12px;
   border-radius: 8px;
 }
+.stats {
+  margin-bottom: 15px;
+  margin-top: -5px;
+  line-height: 0.4;
+  color: #ffffffc5;
+  font-size: 8px;
+  font-weight: 200;
+  border-radius: 8px;
+}
 .text {
   font-size: small;
-  margin-top: 10px;
+  margin-top: 5px;
   font-weight: 400;
   color: rgba(231, 231, 231, 0.742);
-  padding: 8px;
+  padding: 2px;
   line-height: 1.5;
   max-width: auto;
 }
 
 .image {
   margin-top: 5px;
-  margin-bottom: -20px;
+  margin-bottom: -10px;
 }
 @media (max-width: 490px) {
   .card {
