--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -3,12 +3,11 @@
   flex-direction: column;
   padding: 40px;
   background-color: rgba(70, 70, 70, 0.3);
-  width: 380px;
+  width: 28vw;
+  max-height: 85vh;
   border-radius: 15px;
   margin-left: 70px;
-  margin-top: 30%;
-  margin-bottom: 30%;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 .titleContainer {
   text-align: center;
