--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -64,6 +64,50 @@
   margin-bottom: -10px;
 }
 @media (max-width: 490px) {
+  .carousel {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+  }
+
+  .card {
+    margin-left: auto;
+    width: 100vw;
+    border-radius: 0;
+    height: 400px;
+    margin-top: 20px;
+  }
+
+  .mainTitle {
+    font-size: 18px;
+  }
+
+  .subTitle {
+    font-size: 12px;
+    padding: 10px;
+  }
+
+  .text {
+    font-size: small;
+    margin-top: 5px;
+    font-weight: 400;
+    color: rgba(231, 231, 231, 0.742);
+    padding: 2px;
+    line-height: 1.5;
+    max-width: auto;
+    text-align: center; /* Center text within cards */
+  }
+
+  .image {
+    margin-left: 0;
+    margin-top: 5px;
+    margin-bottom: 0;
+  }
+}
+
+/* @media (max-width: 490px) {
   .card {
     margin-left: auto;
     width: 100vw;
@@ -89,4 +133,4 @@
     margin-top: 5px;
     margin-bottom: 0;
   }
-}
+} */
