--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -9,7 +9,7 @@
   height: 100%;
 }
 .background {
-  background-image: url("/public/wpTheme.jpg");
+  background-image: url("/public/vecteezy_abstract-purple-fluid-wave-background_6868933.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -27,7 +27,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("/public/wpTheme.jpg");
+    background-image: url("/public/vecteezy_abstract-purple-fluid-wave-background_6868933.jpg");
     background-size: auto;
     background-position: center;
   }
