--- a/styles/video.module.css
+++ b/styles/video.module.css
@@ -1,18 +1,21 @@
 .container {
+  padding: 200px;
+  padding-top: 100px;
   align-items: center;
   flex-direction: column;
   display: flex;
   color: white;
   background-color: rgba(70, 70, 70, 0.2);
   margin: auto;
-  width: 38%;
-  border-radius: 30px;
+  width: 25%;
+  height: 100vh;
+  width: auto;
 }
 @media (max-width: 490px) {
   .container {
-    width: 90%;
+    width: auto;
+    height: 100vh;
     margin: auto;
     padding: 20px;
-    border-radius: 20px;
   }
 }
