--- a/styles/video.module.css
+++ b/styles/video.module.css
@@ -1,14 +1,16 @@
 .container {
-  padding: 200px;
-  padding-top: 100px;
+  /* padding: 300px; */
+  padding-top: 150px;
   align-items: center;
   flex-direction: column;
   display: flex;
   color: white;
   background-color: rgba(70, 70, 70, 0.2);
   margin: auto;
-  width: 25%;
-  height: 100vh;
+  width: 28vw;
+  height: 80vh;
+  max-height: 85vh;
+  border-radius: 15px;
   width: auto;
 }
 @media (max-width: 490px) {
