--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -7,11 +7,12 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
-.background {
-  background-image: url("/public/vecteezy_abstract-purple-fluid-wave-background_6868933.jpg");
+.videoBackground {
   background-repeat: no-repeat;
-  background-size: cover;
+  object-fit: cover;
+  z-index: -1;
 }
 
 @media (max-width: 490px) and (max-height: 1000px) {
@@ -21,13 +22,12 @@
     overflow-y: scroll;
   }
 
-  .background {
+  .videoBackground {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("/public/vecteezy_abstract-purple-fluid-wave-background_6868933.jpg");
     background-size: auto;
     background-position: center;
   }
