navbar headings / colour change - /general layout/ buttons colour change to light blue

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -19,7 +19,7 @@
 .link {
   display: flex;
   flex-direction: column;
-  color: #f866c5;
+  color: #bababaa4;
   text-decoration: none;
   margin-bottom: 28px;
   margin-top: 20px;
