bio text boxes/ layout correction to scroll

--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -16,7 +16,7 @@
   text-align: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(245, 49, 255, 0.34);
+  background-color: #6fcafbd4;
   color: white;
   height: 70px;
   width: 103px;
