--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -6,15 +6,15 @@
   background-color: rgba(24, 24, 24, 0.6);
   margin: auto;
   width: 35%;
+  height: auto;
+  max-height: 95vh;
   border-radius: 15px;
   padding: 40px;
   padding-left: 50px;
   padding-right: 40px;
-
   line-height: 2;
   border: none;
-  max-height: fit-content;
-  overflow: visible;
+  overflow-y: auto;
 }
 
 .buttonContainer {
