--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -5,13 +5,13 @@
   color: rgba(231, 231, 231, 0.742);
   background-color: rgba(24, 24, 24, 0.6);
   margin: auto;
-  width: 35%;
+  width: 38%;
   height: auto;
-  max-height: 95vh;
-  border-radius: 15px;
+  max-height: 100vh;
   padding: 40px;
   padding-left: 50px;
   padding-right: 40px;
+  padding-bottom: 50px;
   line-height: 2;
   border: none;
   overflow-y: auto;
