--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -3,10 +3,10 @@
   font-size: 10pt;
   font-weight: 400;
   color: rgba(231, 231, 231, 0.742);
-  background-color: rgba(70, 70, 70, 0.189);
+  background-color: rgba(70, 70, 70, 0.75);
   margin: auto;
   width: 38%;
-  height: auto;
+  height: 100%;
   max-height: 100vh;
   padding: 40px;
   padding-left: 50px;
