--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -14,6 +14,11 @@
   object-fit: cover;
   z-index: -1;
 }
+.navlogo {
+  width: 100vw;
+  height: 200px;
+  background-color: white;
+}
 
 @media (max-width: 490px) and (max-height: 1000px) {
   .container {
@@ -30,5 +35,8 @@
     height: 100%;
     background-size: auto;
     background-position: center;
+  }
+  .navlogo {
+    height: auto;
   }
 }
