--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -24,7 +24,9 @@
   .container {
     display: block;
     max-height: 100vh;
+    max-width: 100vw;
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .videoBackground {
