--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -15,9 +15,17 @@
   z-index: -1;
 }
 .navlogo {
+  padding: 30px;
   width: 100vw;
-  height: 200px;
+  height: 180px;
   background-color: white;
+}
+.heading {
+  top: 0;
+  margin-left: 5px;
+  font-size: 28px;
+  position: relative;
+  font-weight: 200;
 }
 
 @media (max-width: 490px) and (max-height: 1000px) {
