--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 40px;
-  background-color: rgba(70, 70, 70, 0.189);
+  /* background-color: rgba(70, 70, 70, 0.189); */
   width: 28vw;
   height: auto;
   max-height: 95vh;
@@ -20,7 +20,7 @@
 .link {
   display: flex;
   flex-direction: column;
-  color: #f0f0f0bb;
+  color: #ffffff;
   text-decoration: none;
   margin-bottom: 28px;
   margin-top: 20px;
