navbar and form / styles

--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -10,13 +10,13 @@
   padding: 60px;
   border: none;
   margin: auto;
-  margin-left: 10%;
+  /* margin-left: 10%; */
 }
 
 .label {
   color: white;
-  justify-content: center;
-  text-align: center;
+  justify-content: start;
+  text-align: start;
   display: flex;
   margin-top: 20px;
 }
