--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -20,7 +20,7 @@
 .link {
   display: flex;
   flex-direction: column;
-  color: #ffffff;
+  color: #ffffffe3;
   text-decoration: none;
   margin-bottom: 28px;
   margin-top: 20px;
