pepino logo change for lime colour

--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -1,6 +1,6 @@
 .button {
-  background-color: #6fcafbd4;
-  color: white;
+  background-color: #edff7c;
+  color: rgb(200, 200, 200);
   border-radius: 22px;
   font-size: medium;
   height: 56px;
