--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -21,13 +21,14 @@
 }
 .servicecard {
   margin-left: 4%;
-  padding: 20px;
+  padding: 25px;
   background-color: rgba(255, 255, 255, 0.492);
   border-radius: 20px;
-  height: 390px;
-  min-width: 300px;
+  height: auto;
+  min-width: 500px;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  justify-content: center;
   transition: transform 0.3s ease;
   text-decoration: none;
 }
