--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -25,15 +25,17 @@
   background-color: rgba(70, 70, 70, 0.3);
   border-radius: 20px;
   height: auto;
-  min-width: 500px;
+  min-width: fit-content;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
   transition: transform 0.3s ease;
   text-decoration: none;
 }
 
 .card:hover {
+  transform: translateY(-5px);
+}
+.servicecard:hover {
   transform: translateY(-5px);
 }
 
@@ -101,7 +103,7 @@
     margin-left: auto;
     width: 100vw;
     border-radius: 0;
-    height: 400px;
+    height: auto;
     margin-top: 20px;
   }
 
