--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  justify-content: flex-start;
   align-items: center;
   max-height: 100%;
   position: fixed;
@@ -29,6 +30,7 @@
 
 @media (max-width: 490px) and (max-height: 1000px) {
   .container {
+    align-items: center;
     display: block;
     max-height: 100vh;
     max-width: 100vw;
