--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -80,6 +80,10 @@
     background-color: rgba(255, 255, 255, 0);
     line-height: 0.8;
   }
+  .logos {
+    justify-items: flex-start;
+    align-items: center;
+  }
 
   .link {
     margin-left: 0;
