--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
   align-items: center;
   max-height: 100%;
   position: fixed;
