--- a/styles/video.module.css
+++ b/styles/video.module.css
@@ -1,25 +1,21 @@
 .container {
   /* padding: 300px; */
-  padding-top: 150px;
+  padding-top: 100px;
   padding-bottom: 80px;
-
   align-items: center;
   flex-direction: column;
   display: flex;
   color: white;
   background-color: rgba(70, 70, 70, 0.189);
-  margin: auto;
-  width: 28vw;
+  margin: 20px;
+  width: 60vw;
   height: 80vh;
   max-height: 85vh;
   border-radius: 15px;
-  width: auto;
 }
 @media (max-width: 490px) {
   .container {
-    padding: 20px;
     margin: auto;
     width: auto;
-    height: 100vh;
   }
 }
