service card/home - details and pricing

--- a/styles/mediaLinks.module.css
+++ b/styles/mediaLinks.module.css
@@ -1,6 +1,5 @@
 .container {
-  /* margin-bottom: 10%;
-  margin-top: 10%; */
+  /* padding: 10%; */
 }
 
 .press {
@@ -27,11 +26,6 @@
   .press {
     margin-top: 15px;
   }
-}
-
-.container {
-  margin-bottom: 10%;
-  margin-top: 10%;
 }
 
 .press {
