--- a/styles/infoservices.module.css
+++ b/styles/infoservices.module.css
@@ -2,8 +2,9 @@
   margin: 15px;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.867);
+  color: rgb(58, 58, 58);
   border-radius: 15px;
-  height: 350px;
+  height: auto;
   width: 50%;
   flex-direction: column;
   align-items: center;
@@ -20,6 +21,7 @@
   align-items: center;
   text-align: center;
 }
+
 @media (max-width: 490px) {
   .carousel {
     max-width: 100vw;
