--- a/styles/infoservices.module.css
+++ b/styles/infoservices.module.css
@@ -11,6 +11,19 @@
   transition: transform 0.3s ease;
   text-decoration: none;
 }
+.cardBlack {
+  margin: 15px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.465);
+  color: rgb(255, 255, 255);
+  border-radius: 15px;
+  height: auto;
+  width: 50%;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.3s ease;
+  text-decoration: none;
+}
 
 .carousel {
   display: flex;
